# emuko

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile  README.md  emuko.yml  korisc.yml  registry.json  runlinux.sh  runlinux_interactive.sh  runmmu.sh  runsmoke.sh
.dir/: dir.yml
debug/: README.md  poll_state.sh  proba_all_basic.sh  probe_lsla.sh  probe_lsla_enter_loop.sh  repro_ls_dirs.sh  repro_lsl_bin_etc.sh  repro_lsl_dirs.sh  repro_lsl_entries.sh  repro_lsla_hang.sh  start_daemon.sh
docs/: CNAME  index.html
examples/bare_printf/: Makefile  link.ld  main.c  start.S
smoke/: link.ld  mmu_sv39_smoke.S  uart_sbi_smoke.S
src/: bus.rs  clint.rs  csr.rs  dev.rs  disas.rs  efi.rs  elf.rs  fdt.rs  hart.rs  isa.rs  main.rs  pe.rs  plic.rs  sbi.rs  snapshot.rs  system.rs  trap.rs
src/hart/: cache_mmu.rs  decode.rs  exec_core.rs  jit_a64.rs  jit_amd64.rs  jit_arm64.rs  memory.rs  state.rs  trap_handlers.rs  watch.rs
tests/: smoke.sh
web/: index.html
