[package]
name = "emuko"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
zstd = "0.13"

[[bin]]
name = "emuko"
path = "src/main.rs"

[[bin]]
name = "emuko-sim"
path = "src/bin/emuko_sim.rs"

[[bin]]
name = "emukod"
path = "src/bin/emukod.rs"

[[bin]]
name = "emuko-ctl"
path = "src/bin/emuko_ctl.rs"

[[bin]]
name = "emu"
path = "src/bin/emu.rs"

[[bin]]
name = "emuko-jitdiff"
path = "src/bin/emuko_jitdiff.rs"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false
strip = "debuginfo"
